--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -51,8 +51,8 @@
                                 <div class="col-12">
                                     Capital One acquired Wikibuy in fall 2018 and I was brought on to lead
                                     their design
-                                    team
-                                    focusing on integrate and improve the company’s product offering. The
+                                    team and
+                                    focus on integrating and improving the company’s product offering. The
                                     existing Wikibuy mobile application had issues with usability, stability,
                                     new
                                     user attrition, and a lack of overall revenue generation for the business. My
