--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="profile">
         <div class="heroes">
             <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
-            <img class="profile-img" src="./images/ja-profile-photo.png"
-                alt="Portrait image of Jonny Abowd's devilishly handsome face.">
+            <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
-        <h2 class="font-display title fade-in">Digital designer, problem solver, <span class="d-block">and
+        <h2 class="font-display title fade-in">Digital designer, <span class="d-inline-block">problem solver,
+            </span><span class="d-block">and
                 high five
                 enthusiast</span>
         </h2>
