--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -48,14 +48,18 @@
                             <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
-                                    Create a brand and companion mobile app for Capital One’s Generator Makerspace that
-                                    allows
-                                    makers to
-                                    view available equipment, access training resources and supply inventory, view
-                                    remote live
-                                    feeds from the 3D printers, and play the interactive circuit breaker game, competing
-                                    for the
-                                    top score and ultimate bragging rights.
+                                    <p>
+                                        Create a brand and companion mobile app for Capital One’s new Generator
+                                        Makerspace.
+                                    </p>
+                                    <p>
+                                        Allow makers to view available equipment, access training resources and supply
+                                        inventory, and view remote live feeds from the 3D printers.
+                                    </p>
+                                    <p>
+                                        Create an interactive game to increase engagement with the app and allow makers
+                                        to compete for the top score and bragging rights among the maker community.
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
@@ -73,8 +77,7 @@
                                     <h2 class="modal-subhead">My Role</h2>
                                     <div class="col-12">
                                         I designed branding for the space and an end-to-end companion app experience
-                                        including the
-                                        core user experience, UI/UX design, and interactive game.
+                                        including the core user experience and interactive game.
                                     </div>
                                 </div>
                             </div>
@@ -90,8 +93,7 @@
                         <h2 class="mb-3 col-12 text-center project-title">Label-Inspired Logo Lockup</h2>
                         <p class="col-12 col-md-8 text-center mt-0 mb-4">
                             Inspiration for branding included vintage machine labels and mechanical drawings, alluding
-                            to
-                            the process of innovation and creating products by hand.
+                            to the process of innovation and creating products by hand.
                         </p>
                         <div class="col-12 col-md-8 d-flex flex-column">
                             <img class="col-12 round-corners" src="/images/project-images/generator1.png">
@@ -104,8 +106,7 @@
                         <h2 class="mb-3 col-12 text-center project-title text-off-white1">Splash and Login Page Designs
                         </h2>
                         <p class="col-10 text-center mt-0 mb-4 text-off-white2">
-                            Splash and login page with custom keyboard. A Circuit Breaker game is launched as an
-                            easter
+                            Splash and login page with custom keyboard. A Circuit Breaker game is launched as an easter
                             egg when the user taps on the Generator logo.
                         </p>
                         <div class="col-10 col-md-4 d-flex flex-column">
@@ -122,8 +123,8 @@
                         <h2 class="mb-3 col-12 text-center project-title text-off-white1">Home and Tools Page Designs
                         </h2>
                         <p class="col-10 text-center mt-0 mb-4 text-off-white2">
-                            Homepage with quick access to content like featured works, a shared schedule, suggested
-                            projects, and available tools and materials.
+                            Homepage with access to content like featured works, a shared schedule, suggested projects,
+                            and available tools and materials.
                         </p>
                         <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator7.png">
@@ -151,8 +152,8 @@
                     <h2 class="mt-5 mb-3 col-12 text-center project-title">Additional Print Collateral
                     </h2>
                     <p class="col-12 text-center mt-0 mb-4">
-                        Principles handout provides information about the space and signage provides schedule for office
-                        hours.
+                        Principles handout provides information about the space and signage provides a schedule for
+                        office hours.
                     </p>
                     <div class="row no-gutters mb-3 d-flex justify-content-center generator-image-container4">
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column h-100">
