--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -58,42 +58,40 @@
                                         <ul>
                                             <li>Project Management</li>
                                             <li>Creative Direction</li>
-                                            <li>Visual Design</li>
-                                            <li>Concepting</li>
                                             <li>Cat/Designer Herding</li>
-                                            <li>Presenting to 1st Graders</li>
                                             <li>High Fives</li>
-                                            <li>Pizza Partying</li>
+                                            <li>Pizza Party Planning</li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-8 mb-5">
                                     <h2 class="modal-subhead">My Role</h2>
                                     <div class="col-12">
-                                        My role was to work closely with a team of first grade teachers to coordinate
-                                        and bring to life a creative artwork exchange involving over 150 students and
-                                        over 100 professional creatives. This included things like communications,
-                                        artwork digitizing, file managment, print production, creative presentation, and
-                                        documenting the entire experience to name a few.
+                                        <p>
+                                            Work closely with a team of first grade teachers to
+                                            coordinate
+                                            and bring to life a creative artwork exchange involving around 130 students
+                                            and
+                                            over 100 professional creatives.
+                                        </p>
+                                        <p>
+                                            My responsibilities included communications, artwork digitizing,
+                                            file management, print production, creative presentation, and documenting
+                                            the entire experience to name a few.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <h2 class="modal-subhead">Solution</h2>
                                 <p class="col-12">
-                                    For the past few years I’ve organized this incredibly rewarding project for my
-                                    wife Laura’s 1st
-                                    grade
-                                    students.
-                                    It’s called The Monster Project.
+                                    For the past few years I’ve organized an incredibly rewarding project for my wife’s
+                                    students. It’s called The Monster Project.
                                 </p>
                                 <p>
-                                    Each year, the responses we get from the children are not only amazing, but
-                                    incredibly
-                                    moving for me and everyone involved. These range from uncontrollable happiness to
-                                    shrieking
-                                    excitement. These reactions are sparked by presenting artistic interpretations like
-                                    this:
+                                    Each year, the responses we get from the children are amazing. They range from
+                                    uncontrollable happiness to shrieking excitement. These reactions are sparked by
+                                    presenting artistic interpretations like this:
                                 </p>
                             </div>
                         </div>
@@ -115,44 +113,28 @@
                     </div>
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-5 mb-3">
                                 <p class="col-12">
-                                    I started doing this project after my wife read about the amazing group of creatives
-                                    behind
-                                    the <a href="https://themonsterproject.org/" target="_blank"
-                                        rel="noopener noreferrer">Monster Project</a>. The project was created
-                                    with the simple mission of
-                                    showing students the
-                                    power of their own creativity. The way it works is first, students create a monster
-                                    using
-                                    their
-                                    imagination. It is then given to a professional artist who reimagines it in their
-                                    own style.
-                                    The work is
-                                    presented back to the students and that is where the real magic happens.
+                                    I started this after my wife read about the amazing group of creatives behind the <a
+                                        href="https://themonsterproject.org/" target="_blank"
+                                        rel="noopener noreferrer">Monster Project</a> and asked if I could do one for
+                                    her students. The project was created to show students the power of their own
+                                    creativity.
                                 </p>
                                 <p>
-                                    I’ve worked as a professional designer for over a decade and have gotten to know
-                                    many many
-                                    talented creatives. Realizing this, my wife asked if I would rally them together and
-                                    start
-                                    doing this project for students at her elementary school. I’m very happy to say
-                                    that over 500 students later, the impact we’ve had on the kids and artists involved
-                                    is
-                                    better than I ever could have
-                                    imagined.
+                                    The way it works is first, students create a monster using their imagination. We
+                                    then digitize and give the monster to a professional artist who reimagines it in
+                                    their own style. The work is then presented back to the students and that is where
+                                    the real magic happens.
                                 </p>
                                 <p>
-                                    Year after year, around 100 artists across my network volunteer their time to be a
-                                    part of
-                                    this project. Huge shout out to everyone I’ve had the pleasure of collaborating with
-                                    because
-                                    without each and every one of them, amazing work like this would not be possible.
+                                    Around 100 artists across my network volunteer their time each year to be a part of
+                                    this project. Huge shout out to each and every one of them because without them, an
+                                    amazing project like this would not be possible.
                                 </p>
                                 <p>
-                                    The following are some of the artistic contributions I’ve made to our project over
-                                    the
-                                    years.
+                                    The following are some of the monsters I’ve contributed to our project over the
+                                    years:
                                 </p>
                             </div>
                         </div>
