--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
             <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
-        <h2 class="font-display title fade-in">Digital designer, <span class="d-inline-block">problem solver,
+        <h2 class="font-display title fade-in">UX Designer, <span class="d-inline-block">problem solver,
             </span><span class="d-block">and
                 high five
                 enthusiast</span>
