--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- Primary Meta Tags -->
     <title>Hello, my name is Jonny Abowd.</title>
     <meta name="title" content="Hello, my name is Jonny Abowd.">
-    <meta name="description" content="Digital designer, problem solver, and high five enthusiast.">
+    <meta name="description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
 
     <meta property="og:title" content="Hello, my name is Jonny Abowd.">
-    <meta property="og:description" content="Digital designer, problem solver, and high five enthusiast.">
+    <meta property="og:description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
     <meta property="og:image" content="https://www.jonnyabowd.com/images/ja-image-preview.png">
     <meta property="og:url" content="https://www.jonnyabowd.com/">
     <meta name="twitter:card" content="summary_large_image">
@@ -46,10 +46,10 @@
             <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
             <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
-        <h2 class="font-display title fade-in">UX Designer, <span class="d-inline-block">problem solver,
+        <h2 class="font-display title fade-in">UX Design Lead, <span class="d-inline-block">Problem Solver,
             </span><span class="d-block">and
-                high five
-                enthusiast</span>
+                High Five
+                Enthusiast</span>
         </h2>
         <!-- <div class="hr"></div> -->
         <div class="body fade-in">
